FIX: Alignment of  header for event listing

--- a/css/pagetypes/CalendarPage.css
+++ b/css/pagetypes/CalendarPage.css
@@ -107,6 +107,11 @@ ul.CalendarPageMenu li, ul.CalendarPageSearch li {
     margin-top: 10px;
 }
 
+.fc-left h2{
+    background: yellow;
+    padding-top: 9px;
+}
+
 button.fc-today-button:disabled {
     background: #e6e6e6;
 }
